--- a/ds_wf/ds_wf.csproj
+++ b/ds_wf/ds_wf.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DeltaCore.WorkFlow</RootNamespace>
     <AssemblyName>ds_wf</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
@@ -22,7 +22,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\Deploy\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -45,18 +45,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MathNet.Iridium">
-      <HintPath>..\..\..\..\..\..\..\..\swap\Lib\mathnet-iridium-master\lib\Math.NET-Iridium\MathNet.Iridium.dll</HintPath>
+      <HintPath>..\..\..\..\librerias\MathNet.Iridium.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net40\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -72,12 +70,6 @@
     <Compile Include="Utils\Crypto.cs" />
     <Compile Include="Utils\KeyGenerator.cs" />
     <Compile Include="Ziggurat.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ds_Util\ds_Util.csproj">
-      <Project>{427A0B07-627F-49B5-9A2D-B130C927F4D4}</Project>
-      <Name>ds_Util</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
