--- a/ds_Util/ds_Util.csproj
+++ b/ds_Util/ds_Util.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DeltaCore.Utilities</RootNamespace>
     <AssemblyName>ds_Util</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -47,8 +47,10 @@
   <ItemGroup>
     <Compile Include="Enumeraciones.cs" />
     <Compile Include="Extensiones.cs" />
+    <Compile Include="NetworkConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemHelper.cs" />
+    <Compile Include="TreeData.cs" />
     <Compile Include="Utilerias.cs" />
     <Compile Include="Utilidades.cs" />
   </ItemGroup>
